--- a/index.html
+++ b/index.html
@@ -1,20 +1,144 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <title>Document</title>
-   <style> 
- .center-image {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    <title>Portfolio</title>
+    <style>
+        :root {
+            --primary-color: #4CAF50;
+            --secondary-color: #333;
+            --bg-color: #f4f4f4;
+            --text-color: #555;
+            --max-width: 1200px;
+        }
 
-   </style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.6;
+        }
+
+        header {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin-bottom: 0.5rem;
+        }
+
+        nav {
+            margin-top: 1rem;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 1rem;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .container {
+            max-width: var(--max-width);
+            margin: 2rem auto;
+            padding: 0 1rem;
+            display: grid;
+            gap: 2rem;
+        }
+
+        .about, .projects, .contact {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .about h2, .projects h2, .contact h2 {
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+        }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+        }
+
+        .project {
+            background: var(--secondary-color);
+            color: white;
+            padding: 1rem;
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        .project h3 {
+            margin-bottom: 0.5rem;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: var(--secondary-color);
+            color: white;
+            margin-top: 2rem;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                padding: 0.5rem 0;
+            }
+
+            .container {
+                padding: 0 0.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <img src="https://sklepkupiec.pl/875059-large_default/e-wedel-ww-cztery-wafelki-przekladane-nadzieniem-orzechowym-arachidowym-w-mlecznej-czekoladzie-47-g.jpg" alt="Opis zdjęcia" class="center-image">
+    <header>
+        <h1>Moje Portfolio</h1>
+        
+    </header>
+
+    <main class="container">
+        <section id="about" class="about">
+            <h2>O SOBIE</h2>
+            <p>Jestem technikiem informatykiem.</p>
+        </section>
+
+        <section id="projects" class="projects">
+            <h2>Projekty</h2>
+            <div class="projects-grid">
+                <div class="project">
+                    <h3>Projekt 1</h3>
+                    <p>Pierwsza stronA Portfolio</p>
+                </div>
+                
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2>Kontakt</h2>
+            <p>Jeśli chcesz się ze mną skontaktować, napisz na adres: <a href="mójmailxdddd2@.com">mówłasnymail@gmail.com</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Moje Portfolio. Wszystkie prawa zastrzeżone.</p>
+    </footer>
 </body>
 </html>
